--- a/experiments/human36m/eval/human36m_alg.yaml
+++ b/experiments/human36m/eval/human36m_alg.yaml
@@ -13,7 +13,7 @@ opt:
   n_epochs: 9999
 
   batch_size: 8
-  val_batch_size: 100
+  val_batch_size: 8
 
   lr: 0.00001
 
@@ -23,7 +23,7 @@ model:
   name: "alg"
 
   init_weights: true
-  checkpoint: "./data/pretrained/human36m/human36m_alg_10-04-2019/checkpoints/0060/weights.pth"
+  checkpoint: "data\\pretrained\\human36m\\weights_alg.pth"
 
 
   use_confidences: true
@@ -35,7 +35,7 @@ model:
     style: "simple"
 
     init_weights: true
-    checkpoint: "./data/pretrained/human36m/pose_resnet_4.5_pixels_human36m.pth"
+    checkpoint: "data\\pretrained\\human36m\\pose_resnet_4.5_pixels_human36m.pth"
 
     num_joints: 17
     num_layers: 152
@@ -44,8 +44,8 @@ dataset:
   kind: "human36m"
 
   train:
-    h36m_root: "./data/human36m/processed/_undistorted"
-    labels_path: "./data/human36m/extra/human36m-multiview-labels-GTbboxes.npy"
+    h36m_root: "E:\\LIYUWEI\\H3.6m\\h36m-fetch\\processed_undistorted\\"
+    labels_path: "data\\human36m\\extra\\human36m-multiview-labels-GTbboxes.npy"
     with_damaged_actions: true
     undistort_images: true
 
@@ -55,11 +55,11 @@ dataset:
     randomize_n_views: false
     min_n_views: null
     max_n_views: null
-    num_workers: 8
+    num_workers: 0
 
   val:
-    h36m_root: "./data/human36m/processed/_undistorted"
-    labels_path: "./data/human36m/extra/human36m-multiview-labels-GTbboxes.npy"
+    h36m_root: "E:\\LIYUWEI\\H3.6m\\h36m-fetch\\processed_undistorted\\"
+    labels_path: "data\\human36m\\extra\\human36m-multiview-labels-GTbboxes.npy"
     with_damaged_actions: true
     undistort_images: true
 
@@ -69,6 +69,6 @@ dataset:
     randomize_n_views: false
     min_n_views: null
     max_n_views: null
-    num_workers: 8
+    num_workers: 0
 
     retain_every_n_frames_in_test: 1
