--- a/experiments/human36m/eval/human36m_vol_softmax.yaml
+++ b/experiments/human36m/eval/human36m_vol_softmax.yaml
@@ -15,7 +15,7 @@ opt:
   n_epochs: 9999
 
   batch_size: 5
-  val_batch_size: 20
+  val_batch_size: 8
 
   lr: 0.0001
   process_features_lr: 0.001
@@ -29,7 +29,7 @@ model:
   volume_aggregation_method: "softmax"
 
   init_weights: true
-  checkpoint: "./data/pretrained/human36m/human36m_vol_softmax_10-08-2019/checkpoints/0040/weights.pth"
+  checkpoint: "data\\pretrained\\human36m\\weights_vol.pth"
 
   use_gt_pelvis: false
 
@@ -47,7 +47,7 @@ model:
     style: "simple"
 
     init_weights: true
-    checkpoint: "./data/pretrained/human36m/pose_resnet_4.5_pixels_human36m.pth"
+    checkpoint: "data\\pretrained\\human36m\\pose_resnet_4.5_pixels_human36m.pth"
 
     num_joints: 17
     num_layers: 152
@@ -56,9 +56,9 @@ dataset:
   kind: "human36m"
 
   train:
-    h36m_root: "./data/human36m/processed/_undistorted"
-    labels_path: "./data/human36m/extra/human36m-multiview-labels-GTbboxes.npy"
-    pred_results_path: "./data/pretrained/human36m/human36m_alg_10-04-2019/checkpoints/0060/results/train.pkl"
+    h36m_root: "E:\\LIYUWEI\\H3.6m\\h36m-fetch\\processed_undistorted\\"
+    labels_path: "data\\human36m\\extra\\human36m-multiview-labels-GTbboxes.npy"
+    pred_results_path: None
 
     with_damaged_actions: true
     undistort_images: true
@@ -72,9 +72,9 @@ dataset:
     num_workers: 8
 
   val:
-    h36m_root: "./data/human36m/processed/_undistorted"
-    labels_path: "./data/human36m/extra/human36m-multiview-labels-GTbboxes.npy"
-    pred_results_path: "./data/pretrained/human36m/human36m_alg_10-04-2019/checkpoints/0060/results/val.pkl"
+    h36m_root: "E:\\LIYUWEI\\H3.6m\\h36m-fetch\\processed_undistorted\\"
+    labels_path: "data\\human36m\\extra\\human36m-multiview-labels-GTbboxes.npy"
+    pred_results_path: "data\\pretrained\\human36m\\val_new.pkl"
 
     with_damaged_actions: true
     undistort_images: true
@@ -85,6 +85,6 @@ dataset:
     randomize_n_views: false
     min_n_views: null
     max_n_views: null
-    num_workers: 8
+    num_workers: 0
 
     retain_every_n_frames_in_test: 1
