--- a/experiments/human36m/eval/human36m_alg.yaml
+++ b/experiments/human36m/eval/human36m_alg.yaml
@@ -12,8 +12,8 @@ opt:
   n_objects_per_epoch: 15000
   n_epochs: 9999
 
-  batch_size: 8
-  val_batch_size: 8
+  batch_size: 16
+  val_batch_size: 16
 
   lr: 0.00001
 
@@ -51,7 +51,7 @@ dataset:
 
     scale_bbox: 1.0
 
-    shuffle: true
+    shuffle: false
     randomize_n_views: false
     min_n_views: null
     max_n_views: null
