--- a/experiments/synmit/train/synmit_alg.yaml
+++ b/experiments/synmit/train/synmit_alg.yaml
@@ -3,14 +3,14 @@ kind: "synmit"
 vis_freq: 1000
 vis_n_elements: 10
 
-image_shape: [384, 384]
+image_shape: [256, 256]
 
 opt:
   criterion: "MSESmooth"
   mse_smooth_threshold: 400
 
-  n_objects_per_epoch: 15000
-  n_epochs: 9999
+  n_objects_per_epoch: 150
+  n_epochs: 3
 
   batch_size: 1
   val_batch_size: 16
@@ -34,7 +34,7 @@ model:
     style: "simple"
 
     init_weights: true
-    checkpoint: "data\\pretrained\\human36m\\pose_resnet_4.5_pixels_human36m.pth"
+    checkpoint: "data/pretrained/human36m/pose_resnet_4.5_pixels_human36m.pth"
 
     num_joints: 17
     num_layers: 152
@@ -44,7 +44,8 @@ dataset:
   view_count: 8
 
   train:
-    synmit_root: "E:\\LIYUWEI\\H3.6m\\animation_mit\\"
+    # synmit_root: "E:\\LIYUWEI\\H3.6m\\animation_mit\\"
+    synmit_root: "/data/liyuwei/Pose/dataset/animation_mit/"
     scale_bbox: 1.0
 
     shuffle: true
@@ -54,7 +55,8 @@ dataset:
     num_workers: 0
 
   val:
-    synmit_root: "E:\\LIYUWEI\\H3.6m\\animation_mit\\"
+    # synmit_root: "E:\\LIYUWEI\\H3.6m\\animation_mit\\"
+    synmit_root: "/data/liyuwei/Pose/dataset/animation_mit/"
     with_damaged_actions: true
     undistort_images: true
 
