--- a/experiments/synmit/train/synmit_alg.yaml
+++ b/experiments/synmit/train/synmit_alg.yaml
@@ -1,18 +1,19 @@
 title: "synmit_alg"
 kind: "synmit"
-vis_freq: 1000
+vis_freq: 50
 vis_n_elements: 10
 
+#image_shape: [384, 384]
 image_shape: [256, 256]
 
 opt:
   criterion: "MSESmooth"
   mse_smooth_threshold: 400
 
-  n_objects_per_epoch: 150
-  n_epochs: 3
+  n_objects_per_epoch: 15000
+  n_epochs: 100
 
-  batch_size: 1
+  batch_size: 2
   val_batch_size: 16
 
   lr: 0.00001
@@ -22,8 +23,10 @@ opt:
 model:
   name: "alg"
 
+#  init_weights: true
+#  checkpoint: "data/pretrained/human36m/weights_alg.pth"
   init_weights: false
-  checkpoint: ""
+  checkpoint: None
 
   use_confidences: true
   heatmap_multiplier: 100.0
@@ -35,7 +38,6 @@ model:
 
     init_weights: true
     checkpoint: "data/pretrained/human36m/pose_resnet_4.5_pixels_human36m.pth"
-
     num_joints: 17
     num_layers: 152
 
@@ -67,5 +69,3 @@ dataset:
     min_n_views: null
     max_n_views: null
     num_workers: 0
-
-    retain_every_n_frames_in_test: 30
