--- a/experiments/synmit/train/synmit_vol_softmax.yaml
+++ b/experiments/synmit/train/synmit_vol_softmax.yaml
@@ -6,28 +6,41 @@ gpus: '2'
 image_shape: [256, 256]
 
 opt:
-  criterion: "MSESmooth"
-  mse_smooth_threshold: 400
+  criterion: "MAE"
 
-  n_objects_per_epoch: 150
-  n_epochs: 3
+  use_volumetric_ce_loss: true
+  volumetric_ce_loss_weight: 0.01
+
+  n_objects_per_epoch: 15000
+  n_epochs: 60
 
   batch_size: 1
-  val_batch_size: 16
+  val_batch_size: 10
 
-  lr: 0.00001
+  lr: 0.0001
+  process_features_lr: 0.001
+  volume_net_lr: 0.001
 
   scale_keypoints_3d: 0.1
 
 model:
-  name: "alg"
+  name: "vol"
+  kind: "mpii"
+  volume_aggregation_method: "softmax"
 
-  init_weights: true
-  checkpoint: "logs/synmit_alg_AlgebraicTriangulationNet@10122019_07-49-49/checkpoints/0049/weights.pth"
+  init_weights: false
+  checkpoint: None
 
-  use_confidences: true
-  heatmap_multiplier: 100.0
+  use_gt_pelvis: false
+
+  cuboid_side: 2.5
+
+  volume_size: 64
+  volume_multiplier: 1.0
+  volume_softmax: true
+
   heatmap_softmax: true
+  heatmap_multiplier: 100.0
 
   backbone:
     name: "resnet152"
@@ -47,20 +60,22 @@ dataset:
     # synmit_root: "E:\\LIYUWEI\\H3.6m\\animation_mit\\"
     synmit_root: "/data/liyuwei/Pose/dataset/animation_mit/"
     scale_bbox: 1.0
+    pred_results_path: "logs/eval_synmit_alg_AlgebraicTriangulationNet@12122019_04-18-36/checkpoints/0000/results.pkl"
 
-    shuffle: false
+    shuffle: true
     randomize_n_views: false
     min_n_views: null
     max_n_views: null
-    num_workers: 0
+    num_workers: 8
 
   val:
     # synmit_root: "E:\\LIYUWEI\\H3.6m\\animation_mit\\"
     synmit_root: "/data/liyuwei/Pose/dataset/animation_mit/"
     scale_bbox: 1.0
+    pred_results_path: "logs/eval_synmit_alg_AlgebraicTriangulationNet@12122019_03-32-22/checkpoints/0000/results.pkl"
 
     shuffle: false
     randomize_n_views: false
     min_n_views: null
     max_n_views: null
-    num_workers: 0
+    num_workers: 8
