--- a/experiments/synmit/eval/synmit_alg.yaml
+++ b/experiments/synmit/eval/synmit_alg.yaml
@@ -2,7 +2,7 @@ title: "synmit_alg"
 kind: "synmit"
 vis_freq: 1000
 vis_n_elements: 10
-gpus: '2'
+gpus: '3'
 image_shape: [256, 256]
 
 opt:
@@ -23,7 +23,8 @@ model:
   name: "alg"
 
   init_weights: true
-  checkpoint: "logs/synmit_alg_AlgebraicTriangulationNet@10122019_07-49-49/checkpoints/0049/weights.pth"
+#  checkpoint: "logs/synmit_alg_AlgebraicTriangulationNet@10122019_07-49-49/checkpoints/0049/weights.pth"
+  checkpoint: "logs/synmit_alg_AlgebraicTriangulationNet@13122019_08-14-30/checkpoints/0049/weights.pth"
 
   use_confidences: true
   heatmap_multiplier: 100.0
